--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuetify": "^2.5.5",
     "vuex": "^3.4.0",
-    "vuex-map-fields": "^1.4.1"
+    "vuex-map-fields": "^1.4.1",
+    "vue-lottie": "^0.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
