--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "vue-apexcharts": "^1.6.1",
     "vue-chartjs": "^3.5.1",
     "vue-i18n": "^8.24.5",
+    "vue-lottie": "^0.2.1",
     "vue-router": "^3.5.2",
+    "vue-toastification": "^1.7.14",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuetify": "^2.5.5",
     "vuex": "^3.4.0",
-    "vuex-map-fields": "^1.4.1",
-    "vue-lottie": "^0.2.1"
+    "vuex-map-fields": "^1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
