--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "axios": "^0.21.1",
     "chart.js": "2.9.4",
     "core-js": "^3.6.5",
+    "date-fns": "^2.28.0",
     "firebase": "^8.2.3",
     "jsonwebtoken": "^8.5.1",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.1",
     "vue-chartjs": "^3.5.1",
+    "vue-clipboard2": "^0.3.3",
     "vue-i18n": "^8.24.5",
     "vue-lottie": "^0.2.1",
     "vue-router": "^3.5.2",
