--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "date-fns": "^2.28.0",
     "firebase": "^8.2.3",
     "jsonwebtoken": "^8.5.1",
+    "short-uuid": "^4.2.0",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.1",
     "vue-chartjs": "^3.5.1",
