--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.28.0",
     "firebase": "^8.2.3",
     "jsonwebtoken": "^8.5.1",
+    "pdfvuer": "^1.9.2",
     "short-uuid": "^4.2.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
@@ -31,6 +32,7 @@
     "vue-clipboard2": "^0.3.3",
     "vue-i18n": "^8.24.5",
     "vue-lottie": "^0.2.1",
+    "vue-pdf-app": "^2.1.0",
     "vue-router": "^3.5.2",
     "vue-toastification": "^1.7.14",
     "vue2-perfect-scrollbar": "^1.5.0",
